    will now use "t" acceptance.  This change may have unexpected
    conseqences in code paths that assume running scc_filter on a
    Büchi automaton will always return a Büchi automaton.  For those,
    a "keep_one_color" option has been added to scc_filter.

  - ltsmin's interface will now point to README.ltsmin in case an
    error is found while running divine or spins.

  Python:

  - The spot.automata() and spot.automaton() functions now accept a
    drop_false_edges=False argument to disable the historical behavior
    of ignoring edges labeled by False.

  - Calling aut.highlight_state(s, None) or aut.highlight_edge(e,
    None) may now be used to remove the highlighting color of some
    given state or edge.  Use aut.remove_highlight_states() or
    aut.remove_highlight_edges() to remove all colors. (Issue #554.)

  - Calling aut.get_hight_state(s) or get.highlight_edge(e) will
    return the highlight color of that state/edge or None.

  Bugs fixed:

  - tgba_determinize()'s use_simulation option would cause it to
    segfault on automata with more than 2^16 SCCs, due to overflows in
    computations of indices in the reachability matrix for SCCs.
    (Issue #541.)  This has been fixed by disabled the use_simulation
    optimization in this case.

  - product_or_susp() and product_susp() would behave incorrectly in
    presence of unsatisifable or universal acceptance conditions that
    were not f or t.  (Part of issue #546.)

  - Several algorithms were incorrectly dealing with the "!weak"
    property.  Because they (rightly) assumed that a weak input would
    produce a weak output, they also wrongly assumed that a non-weak
    output would produce a non-weak output.  Unfortunately removing
    states or edges in a non-weak automaton can lead a weak automaton.
    The incorrect property lead to issue #546.  In addition to fixing
    several algorithms, product() and print_hoa() will now raise an